# xfce-winxp-tc

./: .gitignore
icons/luna/: mappings  todo.txt
packaging/: build-deb.sh
packaging/deb/icons/: packicon.sh
packaging/deb/start/: README.md
shell/winver/src/: winver.c
windows/minesweeper/: CMakeLists.txt
windows/minesweeper/src/: application.c  application.h  main.c  window.c  window.h
windows/minesweeper/src/res/: minesweeper.ui  resources.xml
